# HFStaticAnalysis

./: .gitignore  CMakeLists.txt  README.md  build.sh  clang_analysis_config.json  main.cpp
HFStaticAnalysis.xcodeproj/: project.pbxproj
HFStaticAnalysis.xcodeproj/xcshareddata/xcschemes/: HFStaticAnalysis.xcscheme
analysishandler/: analysisconfig.cpp  analysisconfig.hpp  analysishandler.hpp  analysisparser.cpp  analysisparser.hpp  analysistoken.cpp  analysistoken.hpp  analysisutils.cpp  analysisutils.hpp  declanalysishandler.cpp  declanalysishandler.hpp
objccategory/: objccategory.cpp  objccategory.hpp
objcdecl/: vardecl.cpp  vardecl.hpp
objcimage/: objcimage.cpp  objcimage.hpp
objcmethod/: objcmethod.cpp  objcmethod.hpp
objcstmt/: compoundstmt.cpp  compoundstmt.hpp  declstmt.cpp  declstmt.hpp
property/: property.cpp  property.hpp
